# C8550-YOLOv8-seg-on-8550DK

./: README.md
8550-YOLOv8-seg/: CMakeLists.txt  SNPETask.cpp  SNPETask.h  YOLOv8s.cpp  YOLOv8s.h  main.cpp  utils.h
